--- a/doctor-who-03.html
+++ b/doctor-who-03.html
@@ -15,9 +15,11 @@
 <p><a href="index.html">Return to home page</a></p>
 <table border="1">
 <tr>
-<td>[image] </td>
-<td>The Third Doctor</td>
-<td> Jon Pertwee </td>
+<td> <img src="images/300/Doctor-Who-3.jpg" height="300" width="300" alt="the third doctor"/> </td>
+<td><p>The Third Doctor is the third incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He was portrayed by actor Jon Pertwee.
+</p><p>
+Within the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time and space in his TARDIS, frequently with companions. When the Doctor is critically injured, his body automatically regenerates; as a result, his physical appearance and personality change.</p></td>
+
 </tr>
 </table>
 </body>
