--- a/doctor-who-05.html
+++ b/doctor-who-05.html
@@ -15,9 +15,11 @@
 <p><a href="index.html">Return to home page</a></p>
 <table border="1">
 <tr>
-<td>[image] </td>
-<td>The Fifth Doctor</td>
-<td> Peter Davison </td>
+<td><img src="images/300/Doctor-Who-5.jpg" height="300" width="300" alt="the fifth doctor"/>  </td>
+<td><p>The Fifth Doctor is the fifth incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He is portrayed by Peter Davison.</p>
+<p>
+Within the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time and space in his TARDIS, frequently with companions. Because he is a Time Lord, when the Doctor is critically injured, he can regenerate his body; in doing so, his physical appearance and personality change.</p></td>
+
 </tr>
 </table>
 </body>
