--- a/index.html
+++ b/index.html
@@ -15,76 +15,76 @@
 
 <table border="1">
 <tr>
-<td><a href="doctor-who-01.html"><img scr="images/150/Doctor-Who-01.jpg" width="150" height="150" alt= "The First Doctor"/></a></td>
+<td><a href="doctor-who-01.html"><img src="images/150/DoctorWho01.jpg" width="150" height="150" alt= "The First Doctor"/></a></td>
 <td><a href="doctor-who-01.html">The First Doctor</a></td>
 <td><a href="doctor-who-01.html"> William Hartnell </a></td>
 </tr>
 
 <tr>
-<td><a href="doctor-who-02.html"><img scr="images/150/doctor-who-02.jpg" width="150" height="150" alt= "The Second Doctor" </a></td>
+<td><a href="doctor-who-02.html"><img src="images/150/DoctorWho02.jpg" width="150" height="150" alt= "The Second Doctor"/> </a></td>
 <td><a href="doctor-who-02.html">The Second Doctor</a></td>
 <td><a href="doctor-who-02.html"> Patrick Troughton</a></td>
 </tr>
 
 
 <tr>
-<td><a href="doctor-who-03.html"><img scr="images/150/doctor-who-03.jpg" width="150" height="150" alt= "The Third Doctor" </a></td>
+<td><a href="doctor-who-03.html"><img src="images/150/DoctorWho03.jpg" width="150" height="150" alt= "The Third Doctor"/> </a></td>
 <td><a href="doctor-who-03.html">The Third Doctor</a></td>
 <td><a href="doctor-who-03.html"> Jon Pertwee </a></td>
 </tr>
 
 
 <tr>
-<td><a href="doctor-who-04.html"><img scr="images/150/doctor-who-04.jpg" width="150" height="150" alt= "The Fourth Doctor" </a></td>
+<td><a href="doctor-who-04.html"><img src="images/150/DoctorWho04.jpg" width="150" height="150" alt= "The Fourth Doctor"/> </a></td>
 <td><a href="doctor-who-04.html">The Fourth Doctor</a></td>
 <td><a href="doctor-who-04.html"> Tom Baker </a></td>
 </tr>
 
 
 <tr>
-<td><a href="doctor-who-05.html"><img scr="images/150/doctor-who-05.jpg" width="150" height="150" alt= "The Fifth Doctor" </a></td>
+<td><a href="doctor-who-05.html"><img src="images/150/DoctorWho05.jpg" width="150" height="150" alt= "The Fifth Doctor"/> </a></td>
 <td><a href="doctor-who-05.html">The Fifth Doctor</a></td>
 <td><a href="doctor-who-05.html"> Peter Davison </a></td>
 </tr>
 
 
 <tr>
-<td><a href="doctor-who-06.html"><img scr="images/150/doctor-who-06.jpg" width="150" height="150"  alt= "The Sixth Doctor" </a></td>
+<td><a href="doctor-who-06.html"><img src="images/150/DoctorWho06.jpg" width="150" height="150"  alt= "The Sixth Doctor"/> </a></td>
 <td><a href="doctor-who-06.html">The Sixth Doctor</a></td>
 <td><a href="doctor-who-06.html"> Colin Baker </a></td>
 </tr>
 
 
 <tr>
-<td><a href="doctor-who-07.html"><img scr="images/150/doctor-who-07.jpg" width="150" height="150" alt= "The Seventh Doctor" </a></td>
+<td><a href="doctor-who-07.html"><img src="images/150/DoctorWho07.jpg" width="150" height="150" alt= "The Seventh Doctor"/> </a></td>
 <td><a href="doctor-who-07.html">The Seventh Doctor</a></td>
 <td><a href="doctor-who-07.html"> Sylvester McCoy </a></td>
 </tr>
 
 
 <tr>
-<td><a href="doctor-who-08.html"><img scr="images/150/doctor-who-08.jpg" width="150" height="150" alt= "The Eighth Doctor" </a></td>
+<td><a href="doctor-who-08.html"><img src="images/150/DoctorWho08.jpg" width="150" height="150" alt= "The Eighth Doctor"/> </a></td>
 <td><a href="doctor-who-08.html">The Eighth Doctor</a></td>
 <td><a href="doctor-who-08.html"> Paul McGann </a></td>
 </tr>
 
 
 <tr>
-<td><a href="doctor-who-09.html"><img scr="images/150/doctor-who-09.jpg" width="150" height="150" alt= "The Ninth Doctor" </a></td>
+<td><a href="doctor-who-09.html"><img src="images/150/DoctorWho09.jpg" width="150" height="150" alt= "The Ninth Doctor"/> </a></td>
 <td><a href="doctor-who-09.html">The Ninth Doctor</a></td>
 <td><a href="doctor-who-09.html"> Christopher Eccleston </a></td>
 </tr>
 
 
 <tr>
-<td><a href="doctor-who-10.html"><img scr="images/150/doctor-who-10.jpg" width="150" height="150" alt= "The Tenth Doctor" </a></td>
+<td><a href="doctor-who-10.html"><img src="images/150/DoctorWho10.jpg" width="150" height="150" alt= "The Tenth Doctor"/> </a></td>
 <td><a href="doctor-who-10.html">The Tenth Doctor</a></td>
 <td><a href="doctor-who-10.html"> David Tennant </a></td>
 </tr>
 
 
 <tr>
-<td><a href="doctor-who-11.html"><img scr="images/150/doctor-who-11.jpg" width="150" height="150" alt= "The Eleventh Doctor" </a></td>
+<td><a href="doctor-who-11.html"><img src="images/150/DoctorWho11.jpg" width="150" height="150" alt= "The Eleventh Doctor"/> </a></td>
 <td><a href="doctor-who-11.html">The Eleventh Doctor</a></td>
 <td><a href="doctor-who-11.html"> Matt Smith  </a></td>
 </tr>
