--- a/doctor-who-01.html
+++ b/doctor-who-01.html
@@ -2,25 +2,28 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+
 <title>The First Doctor
-
-
-
-</title>
+	<link rel="stylesheet" type="text/css" href="../styles.css" />
 </head>
 
 <body>
 <h1>The First Doctor </h1>
 <p> Portrayed by William Hartnell </p>
-<p><a href="index.html">Return to home page</a></p>
-<table border="1">
+<p><a href="index.html#doctor-01">Return to home page</a></p>
+<table >
 <tr>
-<td><img src="images/300/Doctor-Who-1.jpg" height="300" width="300" alt="the first doctor"/> </td>
-<td><p>The First Doctor is the initial incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He was portrayed by the actor William Hartnell from 1963 to 1966. Hartnell reprised the role in the tenth anniversary story The Three Doctors in 1973 - albeit in a reduced capacity due to his ailing health. In 1983, actor Richard Hurndall played the part of the First Doctor in the 20th anniversary story The Five Doctors, as William Hartnell had died in 1975. A cinematic version of the character, Dr. Who, was played by Peter Cushing.</p>
+	<td><a href="index.html#doctor-01"><img src="images/300/Doctor-Who-1.jpg" height="300" width="300" alt="the first doctor"/> </td>
 
-<p>Within the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time and space in his TARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body; in doing so, his physical appearance and personality change. Hartnell's Doctor is the Doctor's "original" form. The regeneration plot device was introduced when Hartnell needed to leave the series, and consequently has extended the life of the show for many years. The First Doctor is the youngest incarnation of the Doctor, but has the most aged physical appearance.</p></td>
+	<td>
+		<p>The First Doctor is the initial incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He was portrayed by the actor William Hartnell from 1963 to 1966. Hartnell reprised the role in the tenth anniversary story The Three Doctors in 1973 - albeit in a reduced capacity due to his ailing health. In 1983, actor Richard Hurndall played the part of the First Doctor in the 20th anniversary story The Five Doctors, as William Hartnell had died in 1975. A cinematic version of the character, Dr. Who, was played by Peter Cushing.</p>
+
+		<p>Within the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time and space in his TARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body; in doing so, his physical appearance and personality change. Hartnell's Doctor is the Doctor's "original" form. The regeneration plot device was introduced when Hartnell needed to leave the series, and consequently has extended the life of the show for many years. The First Doctor is the youngest incarnation of the Doctor, but has the most aged physical appearance.</p>
+	</td>
 
 </tr>
-</table>
-</body>
+	</TARDISble>
+	</body>
 </html>
+
