--- a/doctor-who-02.html
+++ b/doctor-who-02.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>The Second Doctor
 
-
+<link rel="stylesheet" type="text/css" href="../styles.css" />
 
 </title>
 </head>
@@ -12,15 +12,17 @@
 <body>
 <h1>The Second Doctor </h1>
 <p> Portrayed by Patrick Troughton  </p>
-<p><a href="index.html">Return to home page</a></p>
-<table border="1">
+<p><a href="index.html#doctor-02">Return to home page</a></p>
+<table >
 <tr>
-<td><img src="images/300/Doctor-Who-2.jpg" height="300" width="300" alt="the second doctor"/>  </td>
-<td><p>The Second Doctor is the second incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He was portrayed by character actor Patrick Troughton.</p>
+	<td><a href="index.html#doctor-02"><img src="images/300/Doctor-Who-2.jpg" height="300" width="300" alt="the second doctor"/>  </td>
+	<td>
+		<p>The Second Doctor is the second incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He was portrayed by character actor Patrick Troughton.</p>
 
-<p>Within the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time and space in his TARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body; in doing so, his physical appearance and personality change.</p><p>
-
-The transformation into the Second Doctor (originally referred to as a "renewal"), a figure who was the same 'essential' character as the first but with a very different persona, was a turning point in the evolution of the series, which eventually became a critical element of the series' longevity.</p> </td>
+		<p>Within the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time and space in his TARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body; in doing so, his physical appearance and personality change.</p>
+		
+		<p>The transformation into the Second Doctor (originally referred to as a "renewal"), a figure who was the same 'essential' character as the first but with a very different persona, was a turning point in the evolution of the series, which eventually became a critical element of the series' longevity.</p> 
+	</td>
 
 </tr>
 </table>
