--- a/doctor-who-03.html
+++ b/doctor-who-03.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>The Third Doctor
 
-
+<link rel="stylesheet" type="text/css" href="../styles.css" />
 
 </title>
 </head>
@@ -12,13 +12,15 @@
 <body>
 <h1>The Third Doctor </h1>
 <p> Portrayed by Jon Pertwee </p>
-<p><a href="index.html">Return to home page</a></p>
+<p><a href="index.html#doctor-03">Return to home page</a></p>
 <table border="1">
 <tr>
-<td> <img src="images/300/Doctor-Who-3.jpg" height="300" width="300" alt="the third doctor"/> </td>
-<td><p>The Third Doctor is the third incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He was portrayed by actor Jon Pertwee.
-</p><p>
-Within the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time and space in his TARDIS, frequently with companions. When the Doctor is critically injured, his body automatically regenerates; as a result, his physical appearance and personality change.</p></td>
+	<td> <a href="index.html#doctor-03"><img src="images/300/Doctor-Who-3.jpg" height="300" width="300" alt="the third doctor"/> </td>
+	<td>
+		<p>The Third Doctor is the third incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He was portrayed by actor Jon Pertwee.</p>
+		
+		<p>Within the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time and space in his TARDIS, frequently with companions. When the Doctor is critically injured, his body automatically regenerates; as a result, his physical appearance and personality change.</p>
+	</td>
 
 </tr>
 </table>
