--- a/doctor-who-05.html
+++ b/doctor-who-05.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>The Fifth Doctor
 
-
+<link rel="stylesheet" type="text/css" href="../styles.css" />
 
 </title>
 </head>
@@ -12,13 +12,14 @@
 <body>
 <h1>The FIfth Doctor </h1>
 <p> Portrayed by Peter Davison </p>
-<p><a href="index.html">Return to home page</a></p>
-<table border="1">
+<p><a href="index.html#05">Return to home page</a></p>
+<table >
 <tr>
-<td><img src="images/300/Doctor-Who-5.jpg" height="300" width="300" alt="the fifth doctor"/>  </td>
-<td><p>The Fifth Doctor is the fifth incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He is portrayed by Peter Davison.</p>
-<p>
-Within the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time and space in his TARDIS, frequently with companions. Because he is a Time Lord, when the Doctor is critically injured, he can regenerate his body; in doing so, his physical appearance and personality change.</p></td>
+	<td><a href="index.html#doctor=05"><img src="images/300/Doctor-Who-5.jpg" height="300" width="300" alt="the fifth doctor"/>  </td>
+	<td>
+		<p>The Fifth Doctor is the fifth incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He is portrayed by Peter Davison.</p>
+		<p>Within the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time and space in his TARDIS, frequently with companions. Because he is a Time Lord, when the Doctor is critically injured, he can regenerate his body; in doing so, his physical appearance and personality change.</p>
+	</td>
 
 </tr>
 </table>
