--- a/doctor-who-10.html
+++ b/doctor-who-10.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>The Tenth Doctor
 
-
+<link rel="stylesheet" type="text/css" href="../styles.css" />
 
 </title>
 </head>
@@ -12,13 +12,15 @@
 <body>
 <h1>The Tenth Doctor </h1>
 <p> Portrayed by David Tennant </p>
-<p><a href="index.html">Return to home page</a></p>
-<table border="1">
+<p><a href="index.html#doctor-10">Return to home page</a></p>
+<table >
 <tr>
-<td><img src="images/300/Doctor-Who-10.jpg" height="300" width="300" alt="the Tenth doctor"/> </td>
-<td><p>The Tenth Doctor is the tenth incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He is played by David Tennant, who appears in three series as well as eight specials. As with previous incarnations of the Doctor, the character has also appeared in other Doctor Who multimedia.</p><p>
+	<td><a href="index.html#doctor-10"><img src="images/300/Doctor-Who-10.jpg" height="300" width="300" alt="the Tenth doctor"/> </td>
+	<td>
+		<p>The Tenth Doctor is the tenth incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He is played by David Tennant, who appears in three series as well as eight specials. As with previous incarnations of the Doctor, the character has also appeared in other Doctor Who multimedia.</p>
 
-In the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time in his TARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body; in doing so, his physical appearance and personality change. Tennant portrays the tenth such incarnation. This incarnation's companions have included working class shop assistant Rose Tyler (Billie Piper) (whom he had first met in his previous incarnation), medical student Martha Jones (Freema Agyeman) and fiery temp worker Donna Noble (Catherine Tate); he eventually parts ways with them all by the end of the 2008 series finale, "Journey's End", after which he attempted to travel alone for the duration of the 2008–10 specials.</P></td>
+		<p>In the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time in his TARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body; in doing so, his physical appearance and personality change. Tennant portrays the tenth such incarnation. This incarnation's companions have included working class shop assistant Rose Tyler (Billie Piper) (whom he had first met in his previous incarnation), medical student Martha Jones (Freema Agyeman) and fiery temp worker Donna Noble (Catherine Tate); he eventually parts ways with them all by the end of the 2008 series finale, "Journey's End", after which he attempted to travel alone for the duration of the 2008–10 specials.</P>
+	</td>
 
 </tr>
 </table>
