--- a/index.html
+++ b/index.html
@@ -4,87 +4,85 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Dr. Who
 
-
-
 </title>
+<link rel="stylesheet" type="text/css" href="styles.css.txt"/>
 </head>
 
-<body>
+<body class="doctor-main-page">
 <h1>Dr. Who </h1>
 <p> Welcome to my first Dr. Who website </p>
 
-<table border="1">
-<tr>
+<table >
+<td><a name="doctor-01" />
 <td><a href="doctor-who-01.html"><img src="images/150/DoctorWho01.jpg" width="150" height="150" alt= "The First Doctor"/></a></td>
 <td><a href="doctor-who-01.html">The First Doctor</a></td>
 <td><a href="doctor-who-01.html"> William Hartnell </a></td>
 </tr>
 
-<tr>
-<td><a href="doctor-who-02.html"><img src="images/150/DoctorWho02.jpg" width="150" height="150" alt= "The Second Doctor"/> </a></td>
+<td><a name="doctor-02" />
+<td><a href= "doctor-who-02.html"><img src="images/150/DoctorWho02.jpg" width="150" height="150" alt= "The Second Doctor"/> </a></td>
 <td><a href="doctor-who-02.html">The Second Doctor</a></td>
 <td><a href="doctor-who-02.html"> Patrick Troughton</a></td>
 </tr>
 
 
-<tr>
+<td><a name="doctor-03" />
 <td><a href="doctor-who-03.html"><img src="images/150/DoctorWho03.jpg" width="150" height="150" alt= "The Third Doctor"/> </a></td>
 <td><a href="doctor-who-03.html">The Third Doctor</a></td>
 <td><a href="doctor-who-03.html"> Jon Pertwee </a></td>
 </tr>
 
 
-<tr>
+<td><a name="doctor-04" />
 <td><a href="doctor-who-04.html"><img src="images/150/DoctorWho04.jpg" width="150" height="150" alt= "The Fourth Doctor"/> </a></td>
 <td><a href="doctor-who-04.html">The Fourth Doctor</a></td>
 <td><a href="doctor-who-04.html"> Tom Baker </a></td>
 </tr>
 
 
-<tr>
+<td><a name="doctor-05" />
 <td><a href="doctor-who-05.html"><img src="images/150/DoctorWho05.jpg" width="150" height="150" alt= "The Fifth Doctor"/> </a></td>
 <td><a href="doctor-who-05.html">The Fifth Doctor</a></td>
 <td><a href="doctor-who-05.html"> Peter Davison </a></td>
 </tr>
 
 
-<tr>
+<td><a name="doctor-06" />
 <td><a href="doctor-who-06.html"><img src="images/150/DoctorWho06.jpg" width="150" height="150"  alt= "The Sixth Doctor"/> </a></td>
 <td><a href="doctor-who-06.html">The Sixth Doctor</a></td>
 <td><a href="doctor-who-06.html"> Colin Baker </a></td>
 </tr>
 
 
-<tr>
+<td><a name="doctor-07" />
 <td><a href="doctor-who-07.html"><img src="images/150/DoctorWho07.jpg" width="150" height="150" alt= "The Seventh Doctor"/> </a></td>
 <td><a href="doctor-who-07.html">The Seventh Doctor</a></td>
 <td><a href="doctor-who-07.html"> Sylvester McCoy </a></td>
 </tr>
 
 
-<tr>
+<td><a name="doctor-08" />
 <td><a href="doctor-who-08.html"><img src="images/150/DoctorWho08.jpg" width="150" height="150" alt= "The Eighth Doctor"/> </a></td>
 <td><a href="doctor-who-08.html">The Eighth Doctor</a></td>
 <td><a href="doctor-who-08.html"> Paul McGann </a></td>
 </tr>
 
 
-<tr>
+<td><a name="doctor-09" />
 <td><a href="doctor-who-09.html"><img src="images/150/DoctorWho09.jpg" width="150" height="150" alt= "The Ninth Doctor"/> </a></td>
 <td><a href="doctor-who-09.html">The Ninth Doctor</a></td>
 <td><a href="doctor-who-09.html"> Christopher Eccleston </a></td>
 </tr>
 
 
-<tr>
+<td> <a name="doctor-10" />
 <td><a href="doctor-who-10.html"><img src="images/150/DoctorWho10.jpg" width="150" height="150" alt= "The Tenth Doctor"/> </a></td>
 <td><a href="doctor-who-10.html">The Tenth Doctor</a></td>
 <td><a href="doctor-who-10.html"> David Tennant </a></td>
 </tr>
 
 
-<tr>
-<td><a href="doctor-who-11.html"><img src="images/150/DoctorWho11.jpg" width="150" height="150" alt= "The Eleventh Doctor"/> </a></td>
+<td> <a name="doctor-11" /> <td><a href="doctor-who-11.html"><img src="images/150/DoctorWho11.jpg" width="150" height="150" alt= "The Eleventh Doctor"/> </a></td>
 <td><a href="doctor-who-11.html">The Eleventh Doctor</a></td>
 <td><a href="doctor-who-11.html"> Matt Smith  </a></td>
 </tr>
