--- a/doctor-who-08.html
+++ b/doctor-who-08.html
@@ -4,18 +4,19 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>The Eighth Doctor
 
-<link rel="stylesheet" type="text/css" href="../styles.css" />
 
 </title>
+<link rel="stylesheet" type="text/css" href="styles.css.txt" />
+
 </head>
 
 <body>
 <h1>The Eighth Doctor </h1>
 <p> Portrayed by Paul McGann </p>
-<p><a href="index.html#doctor-07">Return to home page</a></p>
+<p><a href="index.html#doctor-08">Return to home page</a></p>
 <table >
 <tr>
-	<td><a href="index.html#doctor-07"><img src="images/300/Doctor-Who-8.jpg" height="300" width="300" alt="the eighth doctor"/>  </td>
+	<td><a href="index.html#doctor-08"><img src="images/300/Doctor-Who-8.jpg" height="300" width="300" alt="the eighth doctor"/>  </td>
 	<td>
 		<p>The Eighth Doctor is the eighth incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He was portrayed by Paul McGann. Though he appeared in only one TV film, his adventures are extensively portrayed in other media.</p>
 
