--- a/doctor-who-11.html
+++ b/doctor-who-11.html
@@ -4,9 +4,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>The Eleventh Doctor
 
-<link rel="stylesheet" type="text/css" href="../styles.css" />
 
 </title>
+<link rel="stylesheet" type="text/css" href="styles.css.txt" />
+
 </head>
 
 <body>
@@ -15,7 +16,7 @@
 
 <p> Portrayed by Matt Smith </p>
 <p><a href="index.html#doctor-11">Return to home page</a></p>
-<table \>
+<table >
 <tr>
 	<td><a href="index.html#doctor-11"><img src="images/300/Doctor-Who-11.jpg" height="300" width="300" alt="the eleventh doctor"/> </td>
 	<td>
