--- a/doctor-who-01.html
+++ b/doctor-who-01.html
@@ -2,20 +2,18 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
-
 <title>The First Doctor
-	<link rel="stylesheet" type="text/css" href="../styles.css" />
+</title>
+<link rel="stylesheet" type="text/css" href="styles.css.txt" />
 </head>
 
 <body>
 <h1>The First Doctor </h1>
-<p> Portrayed by William Hartnell </p>
+<p> Portrayed by William Hartnell  </p>
 <p><a href="index.html#doctor-01">Return to home page</a></p>
 <table >
 <tr>
-	<td><a href="index.html#doctor-01"><img src="images/300/Doctor-Who-1.jpg" height="300" width="300" alt="the first doctor"/> </td>
-
+	<td><a href="index.html#doctor-01"><img src="images/300/Doctor-Who-1.jpg" height="300" width="300" alt="the first doctor"/>  </td>
 	<td>
 		<p>The First Doctor is the initial incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He was portrayed by the actor William Hartnell from 1963 to 1966. Hartnell reprised the role in the tenth anniversary story The Three Doctors in 1973 - albeit in a reduced capacity due to his ailing health. In 1983, actor Richard Hurndall played the part of the First Doctor in the 20th anniversary story The Five Doctors, as William Hartnell had died in 1975. A cinematic version of the character, Dr. Who, was played by Peter Cushing.</p>
 
@@ -23,7 +21,6 @@
 	</td>
 
 </tr>
-	</TARDISble>
-	</body>
+</table>
+</body>
 </html>
-
