--- a/doctor-who-02.html
+++ b/doctor-who-02.html
@@ -4,9 +4,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>The Second Doctor
 
-<link rel="stylesheet" type="text/css" href="../styles.css" />
-
 </title>
+<link rel="stylesheet" type="text/css" href="styles.css.txt" />
 </head>
 
 <body>
