--- a/doctor-who-04.html
+++ b/doctor-who-04.html
@@ -4,9 +4,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>The Fourth Doctor
 
-<link rel="stylesheet" type="text/css" href="../styles.css" />
 
 </title>
+<link rel="stylesheet" type="text/css" href="styles.css.txt" />
+
 </head>
 
 <body>
